--- a/style.css
+++ b/style.css
@@ -59,16 +59,30 @@ main{
     border-radius: 50%;
 }
 
-footer{
-    
-    justify-content: end;
-    text-align: center;
-    color: white;
-    padding: 170px 0;
-    font-size: 20px;
-    margin: 20px 0 0;
+.rodapeinicial{
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    align-items: center;
 }
-    
+
+.rodape{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    align-items: center;
+}
+
+.creditos{
+    text-align: center;
+    color:white;
+    font-size: 25px;
+  
+}
+
 /* css fases*/
 
 .textodirecionador{
@@ -110,4 +124,26 @@ footer{
     font-size: 15px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+/* css game over!*/
+
+.fimdejogo{
+    width: 800px;
+    height: auto;
+    text-align: center;
+    position:absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.gameover{
+    font-size: 200px;
+    color: red;
+}
+
+.vencedor{
+    font-size: 100px;
+    color:rgb(248, 223, 1);
+    font-weight: bold;
 }
